--- a/test.yml
+++ b/test.yml
@@ -1,4 +1,3 @@
-
 ---
 - name: Test connection to F5 host
   hosts: localhost
@@ -6,14 +5,21 @@
   gather_facts: False
   vars:
     provider:
-        user: 'admin'
-        password: 'test123'
-        server: "test.com"
-        validate_certs: false
+      user: "admin"
+      password: "test123"
+      server: "test.com"
+      validate_certs: false
   tasks:
     - name: Execute show command to test authentication
       f5networks.f5_modules.bigip_command:
         provider: "{{ provider }}"
         commands:
           - "tmsh show running-config ltm profile"
-
+    - name: run show version on remote devices
+      bigip_command:
+       commands: show sys version
+       provider:
+        server: lb.mydomain.com
+        password: secret
+        user: admin
+      delegate_to: localhost
