--- a/collections/ansible_collections/requirements.yml
+++ b/collections/ansible_collections/requirements.yml
@@ -1,3 +1,4 @@
----
 collections:
- - f5networks.f5_modules
+  - name: https://github.com/F5Networks/f5-ansible-bigip.git#ansible_collections/f5networks/f5_bigip
+    type: git
+    version: devel
